--- a/items.html
+++ b/items.html
@@ -239,7 +239,7 @@
     }
 
     const shopData = {
-        "Chat point": [
+        "chat point": [
         { name: " 1) Akoo tikki(burger)+ onion pizza + cheese sandwich + fry momos ", price: 300},
         { name: "2) Veg roll + paneer puff + veg sandwich + Paneer burger + 750ml water bottel", price: 229 },
         { name: "veggiee pizza + French fries + coca cola 250ml ", price: 250 },
