--- a/cart.html
+++ b/cart.html
@@ -2,322 +2,205 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My Cart • ChatPoint</title>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
     :root {
-      --bg: #000000;
-      --card: rgba(10, 10, 15, 0.88);
-      --border: rgba(0, 255, 200, 0.18);
+      --bg: #000;
+      --card: rgba(15,15,20,0.95);
       --primary: #00ff9d;
-      --secondary: #00f2ea;
-      --accent-glow: rgba(0, 255, 200, 0.5);
-      --secondary-glow: rgba(0, 242, 234, 0.4);
       --text: #e0fffa;
-      --text-muted: #94c9c0;
-      --success: #00ff9d;
-      --danger: #ff4d6d;
-      --radius: 24px;
-      --shadow: 0 12px 40px rgba(0, 0, 0, 0.7);
-      --transition: all 0.35s cubic-bezier(0.25, 0.8, 0.25, 1);
+      --muted: #88d3c0;
+      --border: rgba(0,255,200,0.2);
     }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * { margin:0; padding:0; box-sizing:border-box; }
     body {
       font-family: 'Outfit', sans-serif;
       background: var(--bg);
       color: var(--text);
       min-height: 100vh;
-      overflow-x: hidden;
     }
-    body::before {
-      content: '';
-      position: fixed;
-      inset: 0;
-      background:
-        radial-gradient(circle at 15% 80%, rgba(0, 255, 200, 0.25), transparent 50%),
-        radial-gradient(circle at 85% 20%, rgba(0, 242, 234, 0.22), transparent 50%),
-        radial-gradient(circle at 50% 50%, rgba(0, 255, 200, 0.1), transparent 70%);
-      pointer-events: none;
-      z-index: -1;
-      animation: pulse 12s infinite alternate;
-    }
-    @keyframes pulse { 0%, 100% { opacity: 0.7; } 50% { opacity: 1; } }
-
     header {
       padding: 16px 20px;
-      background: rgba(0, 0, 0, 0.95);
-      backdrop-filter: blur(20px);
+      background: rgba(0,0,0,0.9);
+      backdrop-filter: blur(10px);
       border-bottom: 1px solid var(--border);
       display: flex;
       justify-content: space-between;
       align-items: center;
       position: sticky;
       top: 0;
-      z-index: 1000;
+      z-index: 10;
     }
     .brand {
+      font-size: 28px;
       font-weight: 900;
-      font-size: 30px;
-      letter-spacing: -1px;
     }
-    .brand .chat {
-      background: linear-gradient(90deg, var(--primary), var(--secondary));
+    .brand span {
+      background: linear-gradient(90deg, #00ff9d, #00f2ea);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
     .back-btn {
-      width: 48px; height: 48px;
+      width: 44px; height: 44px;
+      background: rgba(0,255,200,0.15);
+      border: 2px solid rgba(0,255,200,0.3);
       border-radius: 50%;
-      background: rgba(0, 255, 200, 0.15);
-      border: 2px solid rgba(0, 255, 200, 0.3);
       display: grid;
       place-items: center;
       cursor: pointer;
-      transition: var(--transition);
     }
-    .back-btn:hover {
-      background: var(--primary);
-      color: #000;
-      transform: scale(1.15);
-      box-shadow: 0 0 30px var(--accent-glow);
-    }
-    .cart-badge {
-      background: var(--primary);
-      color: #000;
-      font-weight: 900;
-      font-size: 14px;
-      width: 32px; height: 32px;
-      border-radius: 50%;
-      display: grid;
-      place-items: center;
-      box-shadow: 0 0 25px var(--accent-glow);
-    }
+    .back-btn:hover { background: var(--primary); color: #000; }
 
-    main { padding: 20px; max-width: 800px; margin: 0 auto; padding-bottom: 120px; }
+    main { padding: 20px; max-width: 800px; margin: 0 auto; padding-bottom: 100px; }
+
     .cart-container {
       background: var(--card);
-      border-radius: var(--radius);
-      padding: 28px;
+      border-radius: 20px;
+      padding: 24px;
       border: 1px solid var(--border);
-      backdrop-filter: blur(20px);
-      box-shadow: var(--shadow);
-      margin-top: 16px;
-      transition: var(--transition);
+      backdrop-filter: blur(12px);
     }
     .shop-name {
-      font-size: 24px;
+      font-size: 22px;
       font-weight: 900;
       color: var(--primary);
-      margin-bottom: 20px;
-      padding-bottom: 12px;
-      border-bottom: 2px dashed rgba(0, 255, 200, 0.4);
+      margin-bottom: 16px;
+      padding-bottom: 10px;
+      border-bottom: 2px dashed var(--border);
       display: flex;
       align-items: center;
-      gap: 12px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      gap: 10px;
     }
     .cart-item {
       display: flex;
       align-items: center;
-      justify-content: space-between;
       gap: 16px;
-      padding: 20px 12px;
-      border-bottom: 1px solid rgba(0, 255, 200, 0.08);
-      border-radius: 16px;
-      transition: var(--transition);
-    }
-    .cart-item:hover {
-      background: rgba(0, 255, 200, 0.08);
-      transform: translateY(-4px);
-      box-shadow: 0 10px 25px rgba(0, 255, 200, 0.15);
-    }
-
-    /* Fixed layout: name + quantity + price */
-    .item-info {
-      flex: 1;
-      min-width: 0; /* Allows truncation */
+      padding: 16px 0;
+      border-bottom: 1px solid rgba(0,255,200,0.1);
     }
     .item-name {
+      flex: 1;
       font-weight: 600;
-      font-size: 18px;
+      font-size: 17px;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-      max-width: 100%;
-    }
-    .item-controls {
-      flex-shrink: 0;
-      display: flex;
-      align-items: center;
-      gap: 18px;
     }
     .quantity {
       display: flex;
       align-items: center;
-      gap: 16px;
-      background: rgba(0, 255, 200, 0.15);
-      padding: 12px 18px;
-      border-radius: 50px;
-      border: 2px solid rgba(0, 255, 200, 0.35);
-      transition: var(--transition);
-    }
-    .quantity:hover {
-      box-shadow: 0 0 30px var(--accent-glow);
-      background: rgba(0, 255, 200, 0.22);
+      gap: 14px;
+      background: rgba(0,255,200,0.12);
+      padding: 8px 16px;
+      border-radius: 30px;
+      border: 1px solid rgba(0,255,200,0.3);
     }
     .qbtn {
-      width: 42px; height: 42px;
+      width: 36px; height: 36px;
       border-radius: 50%;
-      background: rgba(0, 255, 200, 0.3);
-      color: white;
-      border: none;
-      font-size: 22px;
-      font-weight: bold;
+      background: transparent;
+      border: 2px solid var(--primary);
+      color: var(--primary);
+      font-size: 20px;
       cursor: pointer;
-      transition: var(--transition);
     }
     .qbtn:hover {
       background: var(--primary);
       color: #000;
-      transform: scale(1.25);
-      box-shadow: 0 0 30px var(--accent-glow);
     }
     .qty {
-      min-width: 44px;
+      min-width: 30px;
       text-align: center;
-      font-weight: 900;
-      font-size: 20px;
-      color: var(--secondary);
+      font-weight: 700;
+      color: var(--primary);
     }
     .item-price {
-      font-size: 22px;
       font-weight: 900;
-      background: linear-gradient(90deg, var(--primary), var(--secondary));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      flex-shrink: 0;
-      min-width: 100px;
+      font-size: 20px;
+      color: var(--primary);
+      min-width: 90px;
       text-align: right;
     }
-
     .shop-subtotal {
       text-align: right;
-      color: var(--text-muted);
-      font-size: 16px;
-      margin-top: 14px;
+      margin-top: 12px;
+      color: var(--muted);
       font-weight: 600;
     }
     .total-section {
-      margin-top: 40px;
-      padding: 28px;
-      background: rgba(0, 255, 200, 0.1);
+      margin-top: 30px;
+      padding: 20px;
+      background: rgba(0,255,200,0.08);
       border: 2px dashed var(--primary);
-      border-radius: 20px;
+      border-radius: 16px;
       text-align: center;
     }
     .grand-total {
-      font-size: 36px !important;
+      font-size: 32px;
       font-weight: 900;
-      background: linear-gradient(90deg, var(--primary), var(--secondary));
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      text-shadow: 0 0 30px rgba(0, 255, 200, 0.6);
-      margin-top: 10px;
+      color: var(--primary);
+      margin: 8px 0;
     }
     .actions {
-      margin-top: 40px;
+      margin-top: 30px;
       display: flex;
-      gap: 20px;
-      justify-content: center;
-      flex-wrap: wrap;
+      gap: 16px;
     }
     .btn {
-      padding: 20px 44px;
-      border: none;
-      border-radius: 20px;
-      font-weight: 800;
-      font-size: 18px;
-      cursor: pointer;
-      transition: var(--transition);
       flex: 1;
-      min-width: 180px;
+      padding: 16px;
+      border: none;
+      border-radius: 16px;
+      font-weight: 700;
+      font-size: 17px;
+      cursor: pointer;
     }
     .btn-clear {
-      background: var(--danger);
+      background: #ff4d6d;
       color: white;
     }
-    .btn-clear:hover {
-      background: #ff1a45;
-      transform: translateY(-5px);
-      box-shadow: 0 15px 35px rgba(255, 77, 109, 0.5);
-    }
     .btn-payment {
-      background: linear-gradient(135deg, var(--primary), var(--secondary));
+      background: var(--primary);
       color: #000;
-      font-weight: 900;
-      box-shadow: 0 12px 35px rgba(0, 255, 200, 0.5);
-    }
-    .btn-payment:hover {
-      transform: translateY(-6px) scale(1.05);
-      box-shadow: 0 25px 50px rgba(0, 255, 200, 0.7);
     }
     .empty-cart {
       text-align: center;
-      padding: 120px 20px;
-      color: #777;
-    }
-    .empty-cart i {
-      font-size: 90px;
-      margin-bottom: 24px;
-      color: var(--primary);
-      opacity: 0.3;
+      padding: 80px 20px;
+      color: #666;
     }
     .empty-cart a {
+      margin-top: 20px;
       display: inline-block;
-      margin-top: 30px;
-      padding: 18px 40px;
+      padding: 14px 32px;
       background: transparent;
-      border: 3px solid var(--primary);
+      border: 2px solid var(--primary);
       color: var(--primary);
-      border-radius: 20px;
-      font-weight: 800;
+      border-radius: 12px;
       text-decoration: none;
-      transition: var(--transition);
+      font-weight: 700;
     }
     .empty-cart a:hover {
       background: var(--primary);
       color: #000;
-      transform: scale(1.1);
-      box-shadow: 0 0 40px var(--accent-glow);
     }
 
     @media (max-width: 480px) {
-      header { padding: 14px 16px; }
-      .brand { font-size: 26px; }
-      main { padding: 16px; }
-      .cart-container { padding: 22px; }
-      .cart-item { flex-direction: column; align-items: stretch; gap: 16px; }
-      .item-info, .item-controls, .item-price { text-align: center; }
-      .item-price { align-self: flex-end; font-size: 26px; }
-      .grand-total { font-size: 30px !important; }
+      .cart-item { flex-direction: column; align-items: stretch; text-align: center; }
+      .item-price { align-self: flex-end; }
       .actions { flex-direction: column; }
-      .btn { max-width: none; }
     }
   </style>
 </head>
 <body>
+
   <header>
-    <div class="back-btn" onclick="history.back()">
-      <i class="fas fa-arrow-left"></i>
-    </div>
-    <div class="brand"><span class="chat">Chat</span>Point</div>
-    <div style="display:flex;align-items:center;gap:12px;font-weight:800;color:var(--primary)">
-      My Cart
-      <div class="cart-badge" id="cartBadge">0</div>
+    <div class="back-btn" onclick="history.back()">←</div>
+    <div class="brand"><span>Chat</span>Point</div>
+    <div style="font-weight:800;color:var(--primary)">
+      My Cart <span class="cart-badge" id="cartBadge" style="display:none;margin-left:8px;padding:4px 10px;background:var(--primary);color:#000;border-radius:99px;font-size:14px;">0</span>
     </div>
   </header>
 
@@ -335,124 +218,74 @@
       localStorage.setItem(CART_KEY, JSON.stringify(cart));
       updateBadge();
     }
-
     function updateBadge() {
-      const total = Object.values(cart).reduce((s, shop) =>
-        s + Object.values(shop).reduce((q, i) => q + i.qty, 0), 0);
-      badge.textContent = total || 0;
-      badge.style.display = total > 0 ? 'grid' : 'none';
+      const total = Object.values(cart).flatMap(s => Object.values(s)).reduce((a, i) => a + i.qty, 0);
+      badge.textContent = total;
+      badge.style.display = total > 0 ? 'inline' : 'none';
     }
 
-    function changeQty(shop, itemName, price, delta) {
+    function changeQty(shop, name, price, delta) {
       if (!cart[shop]) cart[shop] = {};
-      if (!cart[shop][itemName]) cart[shop][itemName] = { qty: 0, price };
-      const newQty = Math.max(0, cart[shop][itemName].qty + delta);
-      cart[shop][itemName].qty = newQty;
-      if (newQty === 0) {
-        delete cart[shop][itemName];
-        if (Object.keys(cart[shop]).length === 0) delete cart[shop];
-      }
+      if (!cart[shop][name]) cart[shop][name] = {qty: 0, price};
+      const newQty = Math.max(0, cart[shop][name].qty + delta);
+      cart[shop][name].qty = newQty;
+      if (newQty === 0) delete cart[shop][name];
+      if (Object.keys(cart[shop]).length === 0) delete cart[shop];
       saveCart();
       renderCart();
     }
 
-    function calculateTotals() {
-      let items = 0, subtotal = 0;
-      for (const shop in cart) {
-        for (const item in cart[shop]) {
-          const { qty, price } = cart[shop][item];
-          items += qty;
-          subtotal += qty * price;
-        }
-      }
-      return { items, subtotal };
-    }
-
     function renderCart() {
       container.innerHTML = "";
-      const { items, subtotal } = calculateTotals();
+      let grandTotal = 0, totalItems = 0;
 
-      if (items === 0) {
-        container.innerHTML = `
-          <div class="empty-cart">
-            <i class="fas fa-shopping-bag"></i>
-            <p style="font-size:24px;margin:20px 0;">Your cart is empty</p>
-            <a href="index.html">Explore Menu</a>
-          </div>`;
+      if (Object.keys(cart).length === 0) {
+        container.innerHTML = `<div class="empty-cart">
+          <i class="fas fa-shopping-bag" style="font-size:80px;color:#333;margin-bottom:20px;"></i>
+          <p style="font-size:22px;">Your cart is empty</p>
+          <a href="index.html">Explore Menu</a>
+        </div>`;
         return;
       }
 
       for (const shop in cart) {
         let shopTotal = 0;
         const shopDiv = document.createElement("div");
-        shopDiv.className = "shop-section";
 
-        const title = document.createElement("div");
-        title.className = "shop-name";
-        title.innerHTML = `<i class="fas fa-store"></i> ${shop}`;
-        title.title = shop; // Full shop name on hover
-        shopDiv.appendChild(title);
+        shopDiv.innerHTML = `<div class="shop-name">Store ${shop}</div>`;
 
-        for (const itemName in cart[shop]) {
-          const { qty, price } = cart[shop][itemName];
+        for (const name in cart[shop]) {
+          const {qty, price} = cart[shop][name];
           const total = qty * price;
           shopTotal += total;
+          grandTotal += total;
+          totalItems += qty;
 
-          const item = document.createElement("div");
-          item.className = "cart-item";
-
-          // Fixed layout: name (truncated) → quantity (fixed) → price
-          item.innerHTML = `
-            <div class="item-info">
-              <div class="item-name" title="${itemName}">${itemName}</div>
-            </div>
-
-            <div class="item-controls">
+          shopDiv.innerHTML += `
+            <div class="cart-item">
+              <div class="item-name" title="${name}">${name}</div>
               <div class="quantity">
-                <button class="qbtn" onclick="changeQty('${shop}', '${itemName}', ${price}, -1)">−</button>
+                <button class="qbtn" onclick="changeQty('${shop}','${name}',${price},-1)">−</button>
                 <div class="qty">${qty}</div>
-                <button class="qbtn" onclick="changeQty('${shop}', '${itemName}', ${price}, 1)">+</button>
+                <button class="qbtn" onclick="changeQty('${shop}','${name}',${price},1)">+</button>
               </div>
-            </div>
-
-            <div class="item-price">₹${total}</div>
-          `;
-          shopDiv.appendChild(item);
+              <div class="item-price">₹${total}</div>
+            </div>`;
         }
 
-        const sub = document.createElement("div");
-        sub.className = "shop-subtotal";
-        sub.textContent = `Subtotal • ₹${shopTotal}`;
-        shopDiv.appendChild(sub);
-
+        shopDiv.innerHTML += `<div class="shop-subtotal">Subtotal ₹${shopTotal}</div>`;
         container.appendChild(shopDiv);
       }
 
       container.innerHTML += `
         <div class="total-section">
-          <div style="font-size:20px;opacity:0.9;">Grand Total</div>
-          <div class="grand-total">₹${subtotal}</div>
+          <div style="font-size:18px;opacity:0.8;">Grand Total</div>
+          <div class="grand-total">₹${grandTotal}</div>
         </div>
         <div class="actions">
-          <button class="btn btn-clear" onclick="clearCart()">Clear Cart</button>
-          <button class="btn btn-payment" onclick="goToPayment()">Proceed to Payment</button>
-        </div>
-      `;
-    }
-
-    function clearCart() {
-      if (confirm("Clear all items?")) {
-        cart = {};
-        localStorage.removeItem(CART_KEY);
-        renderCart();
-      }
-    }
-
-    function goToPayment() {
-      const { items, subtotal } = calculateTotals();
-      localStorage.setItem("orderItemsTotal", items);
-      localStorage.setItem("orderGrandTotal", subtotal);
-      window.location.href = "payment.html";
+          <button class="btn btn-clear" onclick="if(confirm('Clear cart?')){cart={};localStorage.removeItem(CART_KEY);renderCart();}">Clear Cart</button>
+          <button class="btn btn-payment" onclick="location.href='payment.html'">Proceed to Payment</button>
+        </div>`;
     }
 
     renderCart();
