--- a/index.html
+++ b/index.html
@@ -47,6 +47,39 @@
     .slide::before { content: ''; position: absolute; inset: 0; background: linear-gradient(135deg, rgba(89,255,148,0.4), rgba(255,50,99,0.5)); }
     .slide span { position: relative; z-index: 2; background: rgba(0,0,0,0.5); padding: 12px 24px; border-radius: 16px; backdrop-filter: blur(5px); }
     @keyframes slide { 0%,22%{transform:translateX(0%)} 25%,47%{transform:translateX(-25%)} 50%,72%{transform:translateX(-50%)} 75%,97%{transform:translateX(-75%)} 100%{transform:translateX(0%)} }
+
+    /* NEW: Food & Grocery Buttons */
+    .tab-switch { 
+      max-width: 540px; 
+      margin: 0 auto 20px; 
+      display: flex; 
+      gap: 12px; 
+      justify-content: center; 
+    }
+    .tab-btn {
+      padding: 14px 32px;
+      font-weight: 700;
+      font-size: 17px;
+      border-radius: 50px;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      transition: all 0.3s;
+      min-width: 140px;
+      justify-content: center;
+    }
+    .tab-btn.active {
+      background: var(--accent);
+      color: black;
+      box-shadow: 0 4px 20px rgba(89,255,148,0.5);
+    }
+    .tab-btn.inactive {
+      background: #2d2d2d;
+      color: #ccc;
+      border: 1px solid var(--border);
+    }
+
     .search-bar { max-width: 540px; margin: 0 auto 26px; position: relative; }
     .search-bar input { width: 100%; padding: 16px 50px 16px 20px; border: 1px solid var(--border); border-radius: 50px; background: #1a1a1a; color: var(--text); font-size: 16px; }
     .search-bar input:focus { outline:none; border-color:var(--accent); box-shadow:0 0 15px var(--glow); }
@@ -69,10 +102,12 @@
     <i class="fas fa-ice-cream icon"></i>
     <i class="fas fa-mug-hot icon"></i>
   </div>
+
   <header>
     <div class="nav-btn" id="navBtn"><i class="fas fa-bars"></i></div>
     <div class="brand"><span>Chat</span>Point</div>
   </header>
+
   <div class="sidebar" id="sidebar">
     <div class="profile-section" id="profileSection"></div>
     <a href="orders.html">My Orders</a>
@@ -80,6 +115,7 @@
     <a href="#" id="logout" style="display:none;color:#ff6b6b">Logout</a>
   </div>
   <div class="overlay" id="overlay"></div>
+
   <main>
     <div class="offer-slider">
       <div class="slides">
@@ -89,12 +125,25 @@
         <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1555939594-58d7cb561ad1?w=800');"><span>Buy 1 Get 1 FREE at FLY PIZZA !</span></div>
       </div>
     </div>
+
+    <!-- Food & Grocery Switch Buttons -->
+    <div class="tab-switch">
+      <a href="index.html" id="foodBtn" class="tab-btn active">
+        <i class="fas fa-utensils"></i> Food
+      </a>
+      <a href="grocery.html" id="groceryBtn" class="tab-btn inactive">
+        <i class="fas fa-shopping-basket"></i> Grocery
+      </a>
+    </div>
+
     <div class="search-bar">
       <input type="text" id="searchInput" placeholder="Search your favorite shop..." oninput="searchShops()">
       <i class="fas fa-search"></i>
     </div>
+
     <div class="grid" id="grid"></div>
   </main>
+
   <footer>© 2025 Chat Point • Made with Passion</footer>
 
   <script>
@@ -107,7 +156,6 @@
       { name: "Mister Chef", img: "mister-chef.png", rating: 4.7, desc: "Juicy burgers with secret sauce.", items: ["Classic Burger", "Cheese Blast", "Veg Crunch", "Fries Combo"] },
       { name: "Dolphin Hotel", img: "images/Tandoori-Paneer.jpg", rating: 4.5, desc: "Fresh sandwiches & healthy bites.", items: ["Veg Sandwich", "Grilled Cheese", "Club Sandwich", "Cold Coffee"] },
       { name: "Hassanmba iyyangar bakery ", img: "images/bekary.png", rating: 4.5, desc: "Fresh sandwiches & healthy bites.", items: ["Veg Sandwich", "Grilled Cheese", "Club Sandwich", "Cold Coffee"] }
-      // ← ONLY THIS LINE CHANGED: "Bekary.png" → "bekary.png"
     ];
 
     function renderShops(filter = "") {
@@ -142,6 +190,7 @@
       document.getElementById("sidebar").classList.add("active");
       document.getElementById("overlay").classList.add("active");
     };
+
     document.getElementById("overlay").onclick = () => {
       document.getElementById("sidebar").classList.remove("active");
       document.getElementById("overlay").classList.remove("active");
@@ -161,6 +210,17 @@
       }
     }
 
+    // Auto-highlight active tab (Food or Grocery)
+    window.addEventListener("load", () => {
+      const path = location.pathname.split("/").pop();
+      if (path === "grocery.html" || path === "grocery") {
+        document.getElementById("foodBtn").classList.remove("active");
+        document.getElementById("foodBtn").classList.add("inactive");
+        document.getElementById("groceryBtn").classList.remove("inactive");
+        document.getElementById("groceryBtn").classList.add("active");
+      }
+    });
+
     window.onload = () => {
       renderShops();
       loadProfile();
@@ -168,9 +228,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
