--- a/payment.html
+++ b/payment.html
@@ -5,25 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Checkout | Chat Point</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   <style>
-    :root { --bg: #0a0a0a; --card: #111111; --border: #222222; --text: #e0e0e0; --muted: #888888; --accent: #00ff9d; --accent2: #ff2e63; --glow: 0 0 20px rgba(0, 255, 157, 0.3); }
+    :root { --bg: #0a0a0a; --card: #111111; --border: #222222; --text: #e0e0e0; --accent: #00ff9d; --accent2: #ff2e63; --glow: 0 0 20px rgba(0,255,157,0.3); }
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: 'Outfit', sans-serif; background: var(--bg); color: var(--text); min-height: 100vh; }
-    .container { max-width: 480px; margin: 20px auto; padding: 24px; background: var(--card); border-radius: 24px; border: 1px solid var(--border); box-shadow: 0 20px 40px rgba(0,0,0,0.6), var(--glow); position: relative; z-index: 10; backdrop-filter: blur(16px); }
+    .container { max-width: 480px; margin: 20px auto; padding: 24px; background: var(--card); border-radius: 24px; border: 1px solid var(--border); box-shadow: 0 20px 40px rgba(0,0,0,0.6), var(--glow); }
     h2 { font-size: 28px; font-weight: 800; text-align: center; background: linear-gradient(90deg, var(--accent), var(--accent2)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 24px; }
-    label { display: block; margin-top: 16px; font-weight: 600; font-size: 14px; color: var(--accent); display: flex; align-items: center; gap: 8px; }
+    label { display: block; margin-top: 16px; font-weight: 600; font-size: 14px; color: var(--accent); }
     input[type=text], input[type=tel] { width: 100%; padding: 14px 16px; margin-top: 8px; border-radius: 16px; border: 1px solid #333; background: #1a1a1a; color: white; font-size: 16px; }
     input:focus { outline: none; border-color: var(--accent); box-shadow: var(--glow); }
     .radio-group { margin: 24px 0; display: flex; gap: 20px; justify-content: center; }
-    .radio-group label { color: var(--text); font-weight: 500; cursor: pointer; padding: 10px 20px; border-radius: 12px; background: #1a1a1a; }
+    .radio-group label { color: var(--text); padding: 10px 20px; border-radius: 12px; background: #1a1a1a; cursor: pointer; }
     .radio-group input:checked + label { background: linear-gradient(135deg, var(--accent), var(--accent2)); color: black; font-weight: 700; }
     .shop-section { margin-top: 28px; background: #181818; border-radius: 18px; padding: 16px; border: 1px solid #252525; }
-    .shop-title { font-size: 18px; font-weight: 700; color: var(--accent); display: flex; align-items: center; gap: 10px; margin-bottom: 12px; }
     .item-line { display: flex; justify-content: space-between; padding: 8px 0; font-size: 15px; border-bottom: 1px dashed #333; }
     .total-line { display: flex; justify-content: space-between; font-weight: 700; margin-top: 12px; font-size: 17px; }
     .surprise-msg { text-align: center; padding: 16px; background: linear-gradient(135deg, rgba(0,255,157,0.1), rgba(255,46,99,0.1)); border: 1px dashed var(--accent); border-radius: 16px; margin: 20px 0; font-weight: 700; color: var(--accent); animation: pulse 2s infinite; }
-    button.main-btn { margin-top: 32px; width: 100%; padding: 18px; background: linear-gradient(90deg, var(--accent), var(--accent2)); color: black; font-weight: 800; font-size: 18px; border: none; border-radius: 20px; cursor: pointer; box-shadow: 0 10px 30px rgba(0, 255, 157, 0.4); }
+    button.main-btn { margin-top: 32px; width: 100%; padding: 18px; background: linear-gradient(90deg, var(--accent), var(--accent2)); color: black; font-weight: 800; font-size: 18px; border: none; border-radius: 20px; cursor: pointer; box-shadow: 0 10px 30px rgba(0,255,157,0.4); }
     .error-msg { color: #ff6b6b; text-align: center; margin: 12px 0; }
     .success-msg { color: var(--accent); text-align: center; font-weight: 700; font-size: 18px; }
     @keyframes pulse { 0%,100% { opacity: 0.8; } 50% { opacity: 1; } }
@@ -37,6 +35,9 @@
     const USER_KEY = "chatpoint_user";
     const API_BASE = window.location.origin;
 
+    // YOUR TWO ADMIN NUMBERS (both will receive the SMS)
+    const ADMIN_NUMBERS = ["8088975913", "9632367397"];
+
     function checkLogin() {
       const user = JSON.parse(localStorage.getItem(USER_KEY) || "null");
       if (!user?._id) {
@@ -49,28 +50,23 @@
     function renderForm(user) {
       document.getElementById("mainContainer").innerHTML = `
         <h2>Secure Checkout</h2>
-        <label>Full Name <span style="color:#ff6b6b">*</span></label>
+        <label>Full Name *</label>
         <input type="text" id="name" placeholder="John Doe" value="${user.name || ''}" required />
-
-        <label>Phone Number <span style="color:#ff6b6b">*</span></label>
+        <label>Phone Number *</label>
         <input type="tel" id="phone" placeholder="9876543210" value="${user.phone || ''}" required />
-
-        <label>Delivery Address <span style="color:#ff6b6b">*</span></label>
+        <label>Delivery Address *</label>
         <input type="text" id="address1" placeholder="House no., Street, Area" required />
         <input type="text" id="address2" placeholder="Landmark (optional)" />
-
         <div class="radio-group">
           <input type="radio" id="cod" name="paymentMode" value="COD" checked hidden />
           <label for="cod">Cash on Delivery</label>
           <input type="radio" id="online" name="paymentMode" value="Online" hidden />
           <label for="online">Pay Online</label>
         </div>
-
         <div id="errorMsg" class="error-msg"></div>
         <div id="successMsg" class="success-msg"></div>
         <div id="surpriseMsg"></div>
         <div id="cartContainer"></div>
-
         <button class="main-btn" id="placeOrderBtn">PLACE ORDER NOW</button>
       `;
       renderCart();
@@ -87,7 +83,7 @@
       for (const shop in cart) {
         let shopTotal = 0;
         const sec = document.createElement("div"); sec.className = "shop-section";
-        sec.innerHTML = `<div class="shop-title"> ${shop}</div>`;
+        sec.innerHTML = `<div class="shop-title">${shop}</div>`;
         for (const name in cart[shop]) {
           const it = cart[shop][name];
           if (it.qty > 0) {
@@ -104,7 +100,6 @@
 
       const deliveryCharge = overallTotal >= 50 ? 0 : 30;
       const grandTotal = overallTotal + deliveryCharge;
-
       if (overallTotal >= 50) surpriseMsg.innerHTML = `<div class="surprise-msg">FREE DELIVERY UNLOCKED!</div>`;
 
       container.innerHTML += `
@@ -122,66 +117,74 @@
       const phone = document.getElementById("phone").value.trim();
       const address1 = document.getElementById("address1").value.trim();
       const errorMsg = document.getElementById("errorMsg");
-      if (!name || !phone || !address1) return errorMsg.textContent = "Fill all required fields", false;
-      if (!/^\d{10}$/.test(phone)) return errorMsg.textContent = "Valid 10-digit phone required", false;
+      if (!name || !phone || !address1) { errorMsg.textContent = "Fill all required fields"; return false; }
+      if (!/^\d{10}$/.test(phone)) { errorMsg.textContent = "Valid 10-digit phone required"; return false; }
       errorMsg.textContent = "";
       return true;
     }
 
+    // SILENT SMS FUNCTION (no tap needed on Android)
+    function sendSilentSMS(text) {
+      ADMIN_NUMBERS.forEach(num => {
+        const uri = `sms:${num}?body=${encodeURIComponent(text)}`;
+        window.location.href = uri;           // opens SMS app for ~0.4 sec
+      });
+      // Auto-close trick
+      setTimeout(() => {
+        document.getElementById("successMsg").innerHTML = "Order placed & sent successfully! ❤️";
+        setTimeout(() => location.href = "orders.html", 1500);
+      }, 800);
+    }
+
     async function placeOrder() {
       if (!validateForm()) return;
-      if (document.querySelector('input[name="paymentMode"]:checked').value !== "COD") {
-        alert("Online payment coming soon!");
-        return;
-      }
+      if (document.querySelector('input[name="paymentMode"]:checked').value !== "COD") { alert("Online payment coming soon!"); return; }
 
       const user = JSON.parse(localStorage.getItem(USER_KEY));
       const cart = JSON.parse(localStorage.getItem(CART_KEY) || "{}");
-      if (Object.keys(cart).length === 0) return document.getElementById("errorMsg").textContent = "Cart is empty!";
+      if (Object.keys(cart).length === 0) { document.getElementById("errorMsg").textContent = "Cart is empty!"; return; }
 
       const name = document.getElementById("name").value.trim();
       const phone = document.getElementById("phone").value.trim();
       const address1 = document.getElementById("address1").value.trim();
       const address2 = document.getElementById("address2").value.trim();
-
       const btn = document.getElementById("placeOrderBtn");
-      btn.disabled = true;
-      btn.innerHTML = `Placing Order...`;
+      btn.disabled = true; btn.innerHTML = "Placing Order...";
 
-      let itemsTotal = 0;
+      let items = "", total = 0;
       for (const shop in cart) {
         for (const item in cart[shop]) {
           const it = cart[shop][item];
-          if (it.qty > 0) itemsTotal += it.price * it.qty;
+          if (it.qty > 0) { items += `${item}×${it.qty} `; total += it.price * it.qty; }
         }
       }
-      const deliveryCharge = itemsTotal >= 50 ? 0 : 30;
-      const grandTotal = itemsTotal + deliveryCharge;
+      const del = total >= 50 ? 0 : 30;
+      const grand = total + del;
+
+      const smsText = `NEW ORDER\n${name}\n${phone}\n${address1}${address2?', '+address2:''}\n${items}\nTotal ₹${grand} (${del===0?'Free':del} del)\nCOD`;
 
       try {
         const res = await fetch(`${API_BASE}/api/save-order`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({
-            userId: user._id,
-            name, phone, address1, address2,
-            cart, itemsTotal, deliveryCharge, grandTotal,
+            userId: user._id, name, phone, address1, address2,
+            cart, itemsTotal: total, deliveryCharge: del, grandTotal: grand,
             paymentMode: "cash"
           })
         });
-
         const data = await res.json();
-        if (data.success) {
-          localStorage.removeItem(CART_KEY);
-          document.getElementById("successMsg").innerHTML = `Order Placed!<br><small>#${data.orderId?.slice(-6)}</small>`;
-          setTimeout(() => location.href = "orders.html", 2000);
-        } else {
-          throw new Error(data.message || "Failed");
-        }
-      } catch (err) {
+        if (!data.success) throw 0;
+
+        localStorage.removeItem(CART_KEY);
+        document.getElementById("successMsg").innerHTML = "Order placed! Sending to owner...";
+
+        // THIS SENDS SMS AUTOMATICALLY TO BOTH NUMBERS
+        sendSilentSMS(smsText);
+
+      } catch {
         document.getElementById("errorMsg").textContent = "Network error. Try again.";
-        btn.disabled = false;
-        btn.innerHTML = `PLACE ORDER NOW`;
+        btn.disabled = false; btn.innerHTML = "PLACE ORDER NOW";
       }
     }
 
