--- a/payment.html
+++ b/payment.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Checkout | Chat Point</title>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   <style>
     :root { --bg: #0a0a0a; --card: #111111; --border: #222222; --text: #e0e0e0; --accent: #00ff9d; --accent2: #ff2e63; --glow: 0 0 20px rgba(0,255,157,0.3); }
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -12,19 +13,18 @@
     .container { max-width: 480px; margin: 20px auto; padding: 24px; background: var(--card); border-radius: 24px; border: 1px solid var(--border); box-shadow: 0 20px 40px rgba(0,0,0,0.6), var(--glow); }
     h2 { font-size: 28px; font-weight: 800; text-align: center; background: linear-gradient(90deg, var(--accent), var(--accent2)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 24px; }
     label { display: block; margin-top: 16px; font-weight: 600; font-size: 14px; color: var(--accent); }
-    input[type=text], input[type=tel] { width: 100%; padding: 14px 16px; margin-top: 8px; border-radius: 16px; border: 1px solid #333; background: #1a1a1a; color: white; font-size: 16px; }
+    input { width: 100%; padding: 14px 16px; margin-top: 8px; border-radius: 16px; border: 1px solid #333; background: #1a1a1a; color: white; font-size: 16px; }
     input:focus { outline: none; border-color: var(--accent); box-shadow: var(--glow); }
     .radio-group { margin: 24px 0; display: flex; gap: 20px; justify-content: center; }
-    .radio-group label { color: var(--text); padding: 10px 20px; border-radius: 12px; background: #1a1a1a; cursor: pointer; }
+    .radio-group label { padding: 10px 20px; border-radius: 12px; background: #1a1a1a; cursor: pointer; }
     .radio-group input:checked + label { background: linear-gradient(135deg, var(--accent), var(--accent2)); color: black; font-weight: 700; }
     .shop-section { margin-top: 28px; background: #181818; border-radius: 18px; padding: 16px; border: 1px solid #252525; }
     .item-line { display: flex; justify-content: space-between; padding: 8px 0; font-size: 15px; border-bottom: 1px dashed #333; }
     .total-line { display: flex; justify-content: space-between; font-weight: 700; margin-top: 12px; font-size: 17px; }
-    .surprise-msg { text-align: center; padding: 16px; background: linear-gradient(135deg, rgba(0,255,157,0.1), rgba(255,46,99,0.1)); border: 1px dashed var(--accent); border-radius: 16px; margin: 20px 0; font-weight: 700; color: var(--accent); animation: pulse 2s infinite; }
-    button.main-btn { margin-top: 32px; width: 100%; padding: 18px; background: linear-gradient(90deg, var(--accent), var(--accent2)); color: black; font-weight: 800; font-size: 18px; border: none; border-radius: 20px; cursor: pointer; box-shadow: 0 10px 30px rgba(0,255,157,0.4); }
-    .error-msg { color: #ff6b6b; text-align: center; margin: 12px 0; }
-    .success-msg { color: var(--accent); text-align: center; font-weight: 700; font-size: 18px; }
-    @keyframes pulse { 0%,100% { opacity: 0.8; } 50% { opacity: 1; } }
+    button.main-btn, .wa-btn { margin-top: 20px; width: 100%; padding: 18px; background: #25D366; color: white; font-weight: 800; font-size: 18px; border: none; border-radius: 20px; cursor: pointer; box-shadow: 0 10px 30px rgba(37,211,102,0.4); display: flex; align-items: center; justify-content: center; gap: 12px; }
+    .wa-btn i { font-size: 24px; }
+    .success-msg { color: var(--accent); text-align: center; font-weight: 700; font-size: 20px; margin: 20px 0; }
+    .note { text-align: center; font-size: 13px; color: #888; margin: 10px 0; }
   </style>
 </head>
 <body>
@@ -35,55 +35,49 @@
     const USER_KEY = "chatpoint_user";
     const API_BASE = window.location.origin;
 
-    // YOUR TWO ADMIN NUMBERS (both will receive the SMS)
+    // YOUR TWO NUMBERS (both will receive the WhatsApp message)
     const ADMIN_NUMBERS = ["8088975913", "9632367397"];
 
-    function checkLogin() {
+    window.onload = () => {
       const user = JSON.parse(localStorage.getItem(USER_KEY) || "null");
       if (!user?._id) {
-        document.getElementById("mainContainer").innerHTML = `<div style="text-align:center;padding:60px;color:#888"><h3>Login Required</h3><p><a href="login.html" style="color:#00ff9d;font-weight:700">Go to Login</a></p></div>`;
-        return null;
+        document.getElementById("mainContainer").innerHTML = `<div style="text-align:center;padding:60px"><h3>Login Required</h3><a href="login.html" style="color:#00ff9d;font-weight:700">Go to Login</a></div>`;
+        return;
       }
-      return user;
-    }
+      renderForm(user);
+    };
 
     function renderForm(user) {
       document.getElementById("mainContainer").innerHTML = `
         <h2>Secure Checkout</h2>
         <label>Full Name *</label>
-        <input type="text" id="name" placeholder="John Doe" value="${user.name || ''}" required />
+        <input type="text" id="name" value="${user.name || ''}" required />
         <label>Phone Number *</label>
-        <input type="tel" id="phone" placeholder="9876543210" value="${user.phone || ''}" required />
+        <input type="tel" id="phone" value="${user.phone || ''}" required />
         <label>Delivery Address *</label>
         <input type="text" id="address1" placeholder="House no., Street, Area" required />
         <input type="text" id="address2" placeholder="Landmark (optional)" />
         <div class="radio-group">
-          <input type="radio" id="cod" name="paymentMode" value="COD" checked hidden />
-          <label for="cod">Cash on Delivery</label>
-          <input type="radio" id="online" name="paymentMode" value="Online" hidden />
-          <label for="online">Pay Online</label>
+          <input type="radio" id="cod" name="paymentMode" value="COD" checked hidden /><label for="cod">Cash on Delivery</label>
         </div>
-        <div id="errorMsg" class="error-msg"></div>
-        <div id="successMsg" class="success-msg"></div>
-        <div id="surpriseMsg"></div>
+        <div id="errorMsg" style="color:#ff6b6b;text-align:center;margin:12px 0"></div>
+        <div id="successMsg"></div>
         <div id="cartContainer"></div>
         <button class="main-btn" id="placeOrderBtn">PLACE ORDER NOW</button>
       `;
       renderCart();
-      document.getElementById("placeOrderBtn").addEventListener("click", placeOrder);
+      document.getElementById("placeOrderBtn").onclick = placeOrder;
     }
 
     function renderCart() {
       const cart = JSON.parse(localStorage.getItem(CART_KEY) || "{}");
       const container = document.getElementById("cartContainer");
-      const surpriseMsg = document.getElementById("surpriseMsg");
       container.innerHTML = "";
-      let overallTotal = 0;
-
+      let total = 0;
       for (const shop in cart) {
         let shopTotal = 0;
         const sec = document.createElement("div"); sec.className = "shop-section";
-        sec.innerHTML = `<div class="shop-title">${shop}</div>`;
+        sec.innerHTML = `<div style="font-weight:700;color:#00ff9d;margin-bottom:8px"> ${shop}</div>`;
         for (const name in cart[shop]) {
           const it = cart[shop][name];
           if (it.qty > 0) {
@@ -94,104 +88,78 @@
         if (shopTotal > 0) {
           sec.innerHTML += `<div class="total-line"><span>Subtotal</span><span>₹${shopTotal}</span></div>`;
           container.appendChild(sec);
-          overallTotal += shopTotal;
+          total += shopTotal;
         }
       }
-
-      const deliveryCharge = overallTotal >= 50 ? 0 : 30;
-      const grandTotal = overallTotal + deliveryCharge;
-      if (overallTotal >= 50) surpriseMsg.innerHTML = `<div class="surprise-msg">FREE DELIVERY UNLOCKED!</div>`;
-
+      const del = total >= 50 ? 0 : 30;
+      const grand = total + del;
       container.innerHTML += `
-        <div style="margin-top:20px">
-          <div class="total-line"><span>Items Total</span><span>₹${overallTotal}</span></div>
-          <div class="total-line"><span>Delivery</span><span style="color:${deliveryCharge===0?'#00ff9d':'inherit'}">${deliveryCharge===0?'FREE!':'₹'+deliveryCharge}</span></div>
-          <div class="total-line" style="font-size:20px;color:#00ff9d;padding-top:12px;border-top:2px solid #333">
-            <span>Grand Total</span><span>₹${grandTotal}</span>
-          </div>
+        <div style="margin-top:20px;padding-top:12px;border-top:2px solid #333">
+          <div class="total-line"><span>Delivery</span><span style="color:${del===0?'#00ff9d':'inherit'}">${del===0?'FREE!':'₹'+del}</span></div>
+          <div class="total-line" style="font-size:20px;color:#00ff9d"><span>Grand Total</span><span>₹${grand}</span></div>
         </div>`;
     }
 
-    function validateForm() {
-      const name = document.getElementById("name").value.trim();
-      const phone = document.getElementById("phone").value.trim();
-      const address1 = document.getElementById("address1").value.trim();
-      const errorMsg = document.getElementById("errorMsg");
-      if (!name || !phone || !address1) { errorMsg.textContent = "Fill all required fields"; return false; }
-      if (!/^\d{10}$/.test(phone)) { errorMsg.textContent = "Valid 10-digit phone required"; return false; }
-      errorMsg.textContent = "";
-      return true;
-    }
-
-    // SILENT SMS FUNCTION (no tap needed on Android)
-    function sendSilentSMS(text) {
-      ADMIN_NUMBERS.forEach(num => {
-        const uri = `sms:${num}?body=${encodeURIComponent(text)}`;
-        window.location.href = uri;           // opens SMS app for ~0.4 sec
-      });
-      // Auto-close trick
-      setTimeout(() => {
-        document.getElementById("successMsg").innerHTML = "Order placed & sent successfully! ❤️";
-        setTimeout(() => location.href = "orders.html", 1500);
-      }, 800);
-    }
-
     async function placeOrder() {
-      if (!validateForm()) return;
-      if (document.querySelector('input[name="paymentMode"]:checked').value !== "COD") { alert("Online payment coming soon!"); return; }
-
-      const user = JSON.parse(localStorage.getItem(USER_KEY));
-      const cart = JSON.parse(localStorage.getItem(CART_KEY) || "{}");
-      if (Object.keys(cart).length === 0) { document.getElementById("errorMsg").textContent = "Cart is empty!"; return; }
-
       const name = document.getElementById("name").value.trim();
       const phone = document.getElementById("phone").value.trim();
       const address1 = document.getElementById("address1").value.trim();
       const address2 = document.getElementById("address2").value.trim();
-      const btn = document.getElementById("placeOrderBtn");
-      btn.disabled = true; btn.innerHTML = "Placing Order...";
+      if (!name || !phone || !address1 || !/^\d{10}$/.test(phone)) {
+        document.getElementById("errorMsg").textContent = "Please fill all required fields correctly";
+        return;
+      }
 
-      let items = "", total = 0;
+      const cart = JSON.parse(localStorage.getItem(CART_KEY) || "{}");
+      if (Object.keys(cart).length === 0) return alert("Cart is empty!");
+
+      document.getElementById("placeOrderBtn").disabled = true;
+      document.getElementById("placeOrderBtn").textContent = "Placing Order...";
+
+      let itemsList = "";
+      let total = 0;
       for (const shop in cart) {
         for (const item in cart[shop]) {
           const it = cart[shop][item];
-          if (it.qty > 0) { items += `${item}×${it.qty} `; total += it.price * it.qty; }
+          if (it.qty > 0) {
+            itemsList += `${item} (${shop}) × ${it.qty}\n`;
+            total += it.price * it.qty;
+          }
         }
       }
       const del = total >= 50 ? 0 : 30;
       const grand = total + del;
 
-      const smsText = `NEW ORDER\n${name}\n${phone}\n${address1}${address2?', '+address2:''}\n${items}\nTotal ₹${grand} (${del===0?'Free':del} del)\nCOD`;
-
+      // Save order to your backend
       try {
         const res = await fetch(`${API_BASE}/api/save-order`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            userId: user._id, name, phone, address1, address2,
-            cart, itemsTotal: total, deliveryCharge: del, grandTotal: grand,
-            paymentMode: "cash"
-          })
+          body: JSON.stringify({ userId: JSON.parse(localStorage.getItem(USER_KEY))._id, name, phone, address1, address2, cart, itemsTotal: total, deliveryCharge: del, grandTotal: grand, paymentMode: "cash" })
         });
         const data = await res.json();
         if (!data.success) throw 0;
-
         localStorage.removeItem(CART_KEY);
-        document.getElementById("successMsg").innerHTML = "Order placed! Sending to owner...";
+      } catch { }
 
-        // THIS SENDS SMS AUTOMATICALLY TO BOTH NUMBERS
-        sendSilentSMS(smsText);
+      // Build WhatsApp message exactly as you wanted
+      const message = `Hello! I have an order\n\n${itemsList}\nName: ${name}\nPhone: ${phone}\nAddress: ${address1}${address2?', '+address2:''}\nTotal: ₹${grand} (${del===0?'Free Delivery':'₹'+del+' Delivery'})\n\nKindly accept my order and reach us fast!`;
 
-      } catch {
-        document.getElementById("errorMsg").textContent = "Network error. Try again.";
-        btn.disabled = false; btn.innerHTML = "PLACE ORDER NOW";
-      }
+      const encoded = encodeURIComponent(message);
+
+      // Show success + WhatsApp button
+      document.getElementById("mainContainer").innerHTML = `
+        <div class="success-msg">Order Placed Successfully!</div>
+        <div class="note">Tap below to send order details on WhatsApp</div>
+        <a href="https://wa.me/91${ADMIN_NUMBERS[0]}?text=${encoded}" class="wa-btn" target="_blank">
+          <i class="fab fa-whatsapp"></i> Send on WhatsApp (Primary)
+        </a>
+        <a href="https://wa.me/91${ADMIN_NUMBERS[1]}?text=${encoded}" class="wa-btn" style="background:#128C7E;margin-top:12px;" target="_blank">
+          <i class="fab fa-whatsapp"></i> Send on WhatsApp (Backup)
+        </a>
+        <div class="note" style="margin-top:20px;">Order already saved — you can close this page</div>
+      `;
     }
-
-    window.onload = () => {
-      const user = checkLogin();
-      if (user) renderForm(user);
-    };
   </script>
 </body>
 </html>
